assets/css/nav-styles.css
/* Start navbar styles */
.container-nav {
  width: 100%;
  max-width: 80%;
  margin: auto;
  display: flex;
  justify-content: center;
}

/*Managing navbar as per theme start*/
[data-theme='dark'] .navbar {
  background: #343a40;
}
[data-theme='dark'] .navbar ul.menu li {
  color: #ddd;
}
[data-theme='dark'] .navbar ul.menu li:hover {
  color: #fff;
}
[data-theme='dark'] .navbar ul.menu li.active {
  color: #fff;
  font-weight: 500;
}
[data-theme='dark'] .navbar ul{
  background-color: #343a40;
}
/*Maneging navbar as per theme ends*/

.navbar {
  display: flex;
  height: 80px;
  align-items: center;
  width: 100%;
  background:white;
}

.navbar #link-btn {
  cursor: pointer;
  color: black;
}

.logo {
  width: auto;
  height: 80px;
}

.navbar ul {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  list-style: none;
  margin-bottom: 10px;
}

.navbar ul.menu li {
  cursor: pointer;
  /* margin-bottom: 60px; */
  /* line-height: 80px; */
  font-size: 1em;
  color: #423f3f;
  transition: all ease-in 0.1s;
}

.navbar ul.menu li:hover {
  color: #000000;
}

.navbar ul.menu li + li {
  margin-left: 20px;
}
.navbar .menu li:last-child {
  margin-left: -30px;
}

.navbar ul.menu li.active {
  color: #000000;
}

.navbar a {
  /* background: transparent; */
  color: #000000;
  font-size: 1em;
  padding: 5px 20px;
}

.nav-button {
  cursor: pointer;
  width: 30px;
  height: 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  position: absolute;
  top:0;
  right: 0;
  transform: translate(-50%,50%);
}
.navbar button{
  background-color: transparent;
}
.nav-button span {
  width: 100%;
  background-color:#20014D;
  height: 3px;
}

.toggle-bar {
  margin: 5px 73px;
  display: inline-block;
  width: 52px;
  height: 20px;
  background: #20014d !important;
  border-radius: 50px;
  position: relative;
  cursor: pointer;
}

#toggle-checkbox {
  opacity: 0;
}

.toggle-container {
  position: absolute;
  top: -0.5px;
  left: 0;
  width: 20px;
  height: 20px;
  border-radius: 50px;
  background: #f1c40f;
  transition: transform 0.5s;
}

input:focus + .toggle-container {
  box-shadow: var(--focusShadow);
}

input:checked ~ .toggle-container {
  transform: translateX(32px);
}

/* new header styling */
.red-btn {
  border: 2px solid #FE6655;
  border-radius: 5px;
  color: #FE6655;
  padding: 10px 15px!important;
  border-radius: 5px;

}

.menu {
  display: flex;
  justify-content: flex-end !important;
}

*:focus {
  outline: 0 !important;
}

.menu li:first-child {
  position: absolute;
  left: 8%;
}


.navbar ul li a button{
  background: transparent;
}

.navbar ul li a button:hover {
  cursor: pointer;
}

.toggle-bar-mobile{
  margin: 5px 73px;
  width: 52px;
  height: 20px;
  background: #20014d!important;
  border-radius: 50px;
  position: absolute;
  cursor: pointer;
  top:0;
  right:0;
  transform: translate(-50%,75%);
}



.red-btn:hover{
  color: #fff;
  background-color: #FE6655;
  transition: 0.3s ease;
}


@media only screen and (max-width: 500px) {
  .navbar {
    justify-content: space-between;
    padding: 0 50px;
    background-color: white;
    z-index: 100;
  }

  .navbar button {
    /* display: block; */
    background-color: transparent;
  }
  .toggle-bar{
    display: none;
  }
  .navbar ul {
    display: block;
    text-align: center;
    top: 80px;
    left: 0;
    position: absolute;
    background-color: rgb(240, 234, 234);
    height: 0;
    width: 100%;
    overflow: hidden;
    transition: all ease-in-out 0.3s;
    -webkit-transition: all ease-in-out 0.3s;
    -moz-transition: all ease-in-out 0.3s;
    -ms-transition: all ease-in-out 0.3s;
    -o-transition: all ease-in-out 0.3s;
  }

  .navbar ul.open {
    height: 450px;
  }

  .navbar ul.menu li {
    margin-bottom: 30px;
    margin-top: 30px;
  }

  .navbar ul.menu li + li {
    margin-left: 0px;
  }

}

@media only screen and (min-width: 500px) {
  .nav-button {
    display: none;
    visibility: hidden;
  }
  .toggle-bar-mobile{
    display: none;
  }
  .navbar {
    padding: 2em;
    background-color: white;
  }

  .navbar ul.menu li {
    line-height: normal;
  }

  .navbar ul.menu li:hover {
    transform: translateY(-3%);
  }
  .navbar span {
    padding: 3px;
  }
  
}

